[package]
name = "rsraw-sys"
version = "0.1.0"
build = "build.rs"
include = ["src/lib.rs", "src/bindings.rs", "LICENSE-*", "README.md", "LibRaw/libraw/*", "LibRaw/src/*", "LibRaw/internal/*", "LibRaw/COPYRIGHT", "LibRaw/LICENSE.*", "build.rs"]
edition = "2021"

[dependencies]
libc = "0.2"

[features]
default = []

[lib]
name = "rsraw_sys"

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
bindgen = { version = "0.71", default-features = false, features = ["runtime"] }
